--- a/src/app.html
+++ b/src/app.html
@@ -3,13 +3,22 @@
 
 <head>
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="icon" type="image/png" href="%sveltekit.assets%/favicon-96x96.png" sizes="96x96" />
 	<link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/favicon.svg" />
 	<link rel="shortcut icon" href="%sveltekit.assets%/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
 	<meta name="apple-mobile-web-app-title" content="Etiquette" />
 	<link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://etiquette-conf.ru" />
+	<meta property="og:title" content="Etiquette Conf" />
+	<meta property="og:description" content="Etiquette Conferences" />
+	<meta property="og:image" content="https://etiquette-conf.ru/og-image.png" />
+	<meta property="og:image:width" content="800" />
+	<meta property="og:image:height" content="420" />
+
 	%sveltekit.head%
 </head>
 
