--- a/src/app.html
+++ b/src/app.html
@@ -11,13 +11,33 @@
 	<meta name="apple-mobile-web-app-title" content="Etiquette" />
 	<link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
 
+	<!-- Базовые мета-теги -->
 	<meta property="og:type" content="website" />
+	<meta property="og:locale" content="ru_RU" />
+	<meta property="og:site_name" content="Этикет Конференции | Профессиональные мероприятия международного уровня" />
 	<meta property="og:url" content="https://etiquette-conf.ru" />
-	<meta property="og:title" content="Etiquette Conf" />
-	<meta property="og:description" content="Etiquette Conferences" />
+
+	<!-- Заголовок и описание -->
+	<meta property="og:title" content="Этикет Конференции | Профессиональные мероприятия международного уровня" />
+	<meta property="og:description"
+		content="Организация премиальных мероприятий с фокусом на деловом этикете. Мастер-классы от топ-спикеров, нетворкинг в среде профессионалов и кейсы из реальной практики." />
+
+	<!-- Изображение (оптимизировано под все платформы) -->
 	<meta property="og:image" content="https://etiquette-conf.ru/og-image.png" />
-	<meta property="og:image:width" content="800" />
-	<meta property="og:image:height" content="420" />
+	<meta property="og:image:width" content="1200" />
+	<meta property="og:image:height" content="630" />
+	<meta property="og:image:type" content="image/png" />
+	<meta property="og:image:alt" content="Etiquette Conf: Искусство делового общения на международном уровне" />
+
+	<!-- Для Twitter/X -->
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:title" content="Etiquette Conf | Профессиональные этикет-мероприятия" />
+	<meta name="twitter:description"
+		content="Премиум ивенты с экспертами международного уровня: этикет, протокол и деловая коммуникация" />
+	<meta name="twitter:image" content="https://etiquette-conf.ru/og-image.png" />
+
+	<!-- Дополнительно для VK -->
+	<meta name="vk:image" content="https://etiquette-conf.ru/og-image.png" />
 
 	%sveltekit.head%
 </head>
