Updated og image

--- a/src/app.html
+++ b/src/app.html
@@ -14,11 +14,11 @@
 	<!-- Базовые мета-теги -->
 	<meta property="og:type" content="website" />
 	<meta property="og:locale" content="ru_RU" />
-	<meta property="og:site_name" content="Этикет Конференции | Профессиональные мероприятия международного уровня" />
+	<meta property="og:site_name" content="Etiquette Conf" />
 	<meta property="og:url" content="https://etiquette-conf.ru" />
 
 	<!-- Заголовок и описание -->
-	<meta property="og:title" content="Этикет Конференции | Профессиональные мероприятия международного уровня" />
+	<meta property="og:title" content="Конференции по Этикету | Профессиональные мероприятия международного уровня" />
 	<meta property="og:description"
 		content="Организация премиальных мероприятий с фокусом на деловом этикете. Мастер-классы от топ-спикеров, нетворкинг в среде профессионалов и кейсы из реальной практики." />
 
@@ -27,11 +27,11 @@
 	<meta property="og:image:width" content="1200" />
 	<meta property="og:image:height" content="630" />
 	<meta property="og:image:type" content="image/png" />
-	<meta property="og:image:alt" content="Etiquette Conf: Искусство делового общения на международном уровне" />
+	<meta property="og:image:alt" content="Конференции по Этикету | Искусство делового общения на международном уровне" />
 
 	<!-- Для Twitter/X -->
 	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:title" content="Etiquette Conf | Профессиональные этикет-мероприятия" />
+	<meta name="twitter:title" content="Конференции по Этикету | Профессиональные этикет-мероприятия" />
 	<meta name="twitter:description"
 		content="Премиум ивенты с экспертами международного уровня: этикет, протокол и деловая коммуникация" />
 	<meta name="twitter:image" content="https://etiquette-conf.ru/og-image.png" />
