--- a/src/app.html
+++ b/src/app.html
@@ -1,49 +1,60 @@
 <!doctype html>
 <html lang="%lang%">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" type="image/png" href="%sveltekit.assets%/favicon-96x96.png" sizes="96x96" />
+		<link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/favicon.svg" />
+		<link rel="shortcut icon" href="%sveltekit.assets%/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
+		<meta name="apple-mobile-web-app-title" content="Etiquette" />
+		<link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
 
-<head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="icon" type="image/png" href="%sveltekit.assets%/favicon-96x96.png" sizes="96x96" />
-	<link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/favicon.svg" />
-	<link rel="shortcut icon" href="%sveltekit.assets%/favicon.ico" />
-	<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
-	<meta name="apple-mobile-web-app-title" content="Etiquette" />
-	<link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
+		<!-- Базовые мета-теги -->
+		<meta property="og:type" content="website" />
+		<meta property="og:locale" content="ru_RU" />
+		<meta property="og:site_name" content="Etiquette Conf" />
+		<meta property="og:url" content="https://etiquette-conf.ru" />
 
-	<!-- Базовые мета-теги -->
-	<meta property="og:type" content="website" />
-	<meta property="og:locale" content="ru_RU" />
-	<meta property="og:site_name" content="Etiquette Conf" />
-	<meta property="og:url" content="https://etiquette-conf.ru" />
+		<!-- Заголовок и описание -->
+		<meta
+			property="og:title"
+			content="Конференции по Этикету | Профессиональные мероприятия международного уровня"
+		/>
+		<meta
+			property="og:description"
+			content="Организация премиальных мероприятий с фокусом на деловом этикете. Мастер-классы от топ-спикеров, нетворкинг в среде профессионалов и кейсы из реальной практики."
+		/>
 
-	<!-- Заголовок и описание -->
-	<meta property="og:title" content="Конференции по Этикету | Профессиональные мероприятия международного уровня" />
-	<meta property="og:description"
-		content="Организация премиальных мероприятий с фокусом на деловом этикете. Мастер-классы от топ-спикеров, нетворкинг в среде профессионалов и кейсы из реальной практики." />
+		<!-- Изображение (оптимизировано под все платформы) -->
+		<meta property="og:image" content="https://etiquette-conf.ru/og-image.png" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
+		<meta property="og:image:type" content="image/png" />
+		<meta
+			property="og:image:alt"
+			content="Конференции по Этикету | Искусство делового общения на международном уровне"
+		/>
 
-	<!-- Изображение (оптимизировано под все платформы) -->
-	<meta property="og:image" content="https://etiquette-conf.ru/og-image.png" />
-	<meta property="og:image:width" content="1200" />
-	<meta property="og:image:height" content="630" />
-	<meta property="og:image:type" content="image/png" />
-	<meta property="og:image:alt" content="Конференции по Этикету | Искусство делового общения на международном уровне" />
+		<!-- Для Twitter/X -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta
+			name="twitter:title"
+			content="Конференции по Этикету | Профессиональные этикет-мероприятия"
+		/>
+		<meta
+			name="twitter:description"
+			content="Премиум ивенты с экспертами международного уровня: этикет, протокол и деловая коммуникация"
+		/>
+		<meta name="twitter:image" content="https://etiquette-conf.ru/og-image.png" />
 
-	<!-- Для Twitter/X -->
-	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:title" content="Конференции по Этикету | Профессиональные этикет-мероприятия" />
-	<meta name="twitter:description"
-		content="Премиум ивенты с экспертами международного уровня: этикет, протокол и деловая коммуникация" />
-	<meta name="twitter:image" content="https://etiquette-conf.ru/og-image.png" />
+		<!-- Дополнительно для VK -->
+		<meta name="vk:image" content="https://etiquette-conf.ru/og-image.png" />
 
-	<!-- Дополнительно для VK -->
-	<meta name="vk:image" content="https://etiquette-conf.ru/og-image.png" />
+		%sveltekit.head%
+	</head>
 
-	%sveltekit.head%
-</head>
-
-<body data-sveltekit-preload-data="hover">
-	<div style="display: contents">%sveltekit.body%</div>
-</body>
-
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents">%sveltekit.body%</div>
+	</body>
 </html>
