--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="%lang%">
+<html lang="%lang%" data-theme="%theme%">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,13 +10,11 @@
 		<meta name="apple-mobile-web-app-title" content="Etiquette" />
 		<link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
 
-		<!-- Базовые мета-теги -->
 		<meta property="og:type" content="website" />
 		<meta property="og:locale" content="ru_RU" />
 		<meta property="og:site_name" content="Etiquette Conf" />
 		<meta property="og:url" content="https://etiquette-conf.ru" />
 
-		<!-- Заголовок и описание -->
 		<meta
 			property="og:title"
 			content="Конференции по Этикету | Профессиональные мероприятия международного уровня"
@@ -26,7 +24,6 @@
 			content="Организация премиальных мероприятий с фокусом на деловом этикете. Мастер-классы от топ-спикеров, нетворкинг в среде профессионалов и кейсы из реальной практики."
 		/>
 
-		<!-- Изображение (оптимизировано под все платформы) -->
 		<meta property="og:image" content="https://etiquette-conf.ru/og-image.png" />
 		<meta property="og:image:width" content="1200" />
 		<meta property="og:image:height" content="630" />
@@ -36,7 +33,6 @@
 			content="Конференции по Этикету | Искусство делового общения на международном уровне"
 		/>
 
-		<!-- Для Twitter/X -->
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta
 			name="twitter:title"
@@ -48,7 +44,6 @@
 		/>
 		<meta name="twitter:image" content="https://etiquette-conf.ru/og-image.png" />
 
-		<!-- Дополнительно для VK -->
 		<meta name="vk:image" content="https://etiquette-conf.ru/og-image.png" />
 
 		%sveltekit.head%
